--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 500px;
+  height: 350px;
+
+  padding: 0 10px;
+  box-sizing: border-box;
+
+  background-color: rgb(224, 224, 224);
+  border: solid 2px #965252;
+  border-radius: 5px;
+}
+
+.home h1 {
+  font-size: 30px;
+
+  text-align: center;
+  color: rgba(0, 0, 0, 0.623);
+}
