--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,27 +1,23 @@
-.button{
+.container{
+    position: absolute;
+    top: 0;
+    left: 700px;
     display: inline-flex;
-    padding: 2px;
-    margin-left: 15px;
-   
+    align-items: center;
+}
+
+
+.button{
+    padding: 5px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.8;
-   
     border-radius: 4px;
     border: transparent;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    color: #C6F6D5;
-    background-color: #276749;
-    cursor: pointer;
-   
-}
-button:hover {
     color: #276749;
-    background-color: #276749;
-  }
-
-  .item{
-    margin-bottom: 15px;
-  }
+    background-color: #C6F6D5;
+    cursor: pointer;
+}
